--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,38 @@
 {
-    "compilerOptions": {
-      "baseUrl": ".",
-      "paths": { "*": ["types/*"] },
-      "target": "ES2020",
-      "module": "commonjs",
-      "experimentalDecorators": true,
-      "moduleResolution": "node",
-      "strict": true,
-      "isolatedModules": true,
-      "esModuleInterop": true,
-      "sourceMap": true,
-      "outDir": "dist"
+  "compilerOptions": {
+    "jsx": "preserve",
+    "baseUrl": ".",
+    "paths": {
+      "*": [
+        "types/*"
+      ]
     },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules", "**/*.test.ts", "**/__mocks__/*"]
-  }
-  
+    "target": "ES2020",
+    "module": "commonjs",
+    "experimentalDecorators": true,
+    "moduleResolution": "node",
+    "strict": true,
+    "isolatedModules": true,
+    "esModuleInterop": true,
+    "sourceMap": true,
+    "outDir": "dist",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "resolveJsonModule": true
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.test.ts",
+    "**/__mocks__/*"
+  ]
+}
