--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "wordartjs",
+  "name": "node-next-template",
   "version": "1.0.0",
-  "description": "Generative art from twitter",
+  "description": "Template for running react frontend off a node server with next js and express",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node-dev src/app.ts"
   },
   "author": "Daniel Bjanes",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@types/express": "^4.17.7",
     "@types/react-dom": "^16.9.8",
