--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Daniel Bjanes",
   "license": "MIT",
   "dependencies": {
+    "@emotion/core": "^10.0.35",
     "@types/express": "^4.17.7",
     "@types/react-dom": "^16.9.8",
     "express": "^4.17.1",
